# typestrike

./: .gitignore  AI_EXPLANATION.md  DEPLOY.md  IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  REMAINING_FEATURES.md  SUMMARY.md  build-netlify.sh  netlify.toml  package.json  typing_game_prd.md
rust-game/: Cargo.toml  build.sh
rust-game/src/: entities.rs  game.rs  levels.rs  lib.rs
web/: GEMMA_SETUP.md  index.html  package.json  vite.config.ts
web/public/: _headers  _redirects  clear-cache.html
web/public/models/: README.md
web/src/: achievements.ts  ai-coach.ts  audio.ts  config.ts  game-fallback.ts  main.ts  share.ts  stats.ts  wasm-loader.ts
web/src/components/: settings.ts
